<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flag_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/austria_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/austria"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/austria_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/austria_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/default_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/italy_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/austria_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/austria_red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/austria_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/austria_red" />
    </LinearLayout>

    <TextView
        android:id="@+id/italy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/italy"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/italy_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/austria_flag" />

    <LinearLayout
        android:id="@+id/italy_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/italy_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/madagascar_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/italy_title">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/italy_green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/italy_white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/italy_red" />
    </LinearLayout>

    <TextView
        android:id="@+id/poland_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/poland"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/poland_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/poland_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/poland_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/colombia_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poland_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/poland_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/poland_red" />
    </LinearLayout>

    <TextView
        android:id="@+id/colombia_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/colombia"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/colombia_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poland_flag" />

    <LinearLayout
        android:id="@+id/colombia_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/default_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/thailand_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colombia_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colombia_yellow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colombia_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colombia_red" />
    </LinearLayout>

    <TextView
        android:id="@+id/madagascar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/madagascar"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/madagascar_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/italy_flag" />

    <FrameLayout
        android:id="@+id/madagascar_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/default_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/madagascar_green"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/denmark_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madagascar_title">

        <TextView
            android:layout_width="@dimen/default_flag_width"
            android:layout_height="@dimen/madagascar_line_width"
            android:background="@color/madagascar_red" />

        <TextView
            android:layout_width="@dimen/madagascar_line_width"
            android:layout_height="@dimen/default_flag_height"
            android:background="@color/madagascar_white" />
    </FrameLayout>

    <TextView
        android:id="@+id/thailand_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/thailand"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/thailand_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colombia_flag" />

    <FrameLayout
        android:id="@+id/thailand_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/default_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/thailand_red"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/switzerland_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thailand_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/thailand_white_height"
            android:layout_gravity="center_vertical"
            android:background="@color/thailand_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/thailand_blue_height"
            android:layout_gravity="center_vertical"
            android:background="@color/thailand_blue" />

    </FrameLayout>

    <TextView
        android:id="@+id/denmark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/denmark"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/denmark_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madagascar_flag" />

    <FrameLayout
        android:id="@+id/denmark_flag"
        android:layout_width="@dimen/default_flag_width"
        android:layout_height="@dimen/denmark_flag_height"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/denmark_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/denmark_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/denmark_christ_width"
            android:layout_gravity="center_vertical"
            android:background="@color/denmark_white" />

        <TextView
            android:layout_width="@dimen/denmark_christ_width"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/denmark_start_margin"
            android:layout_marginLeft="@dimen/denmark_start_margin"
            android:background="@color/denmark_white" />
    </FrameLayout>

    <TextView
        android:id="@+id/switzerland_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/switzerland"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/switzerland_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thailand_flag" />

    <FrameLayout
        android:id="@+id/switzerland_flag"
        android:layout_width="@dimen/switzerland_dimen"
        android:layout_height="@dimen/switzerland_dimen"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/switzerland_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switzerland_title">

        <TextView
            android:layout_width="@dimen/switzerland_christ_dimen_1"
            android:layout_height="@dimen/switzerland_christ_dimen_2"
            android:layout_gravity="center"
            android:background="@color/switzerland_white" />

        <TextView
            android:layout_width="@dimen/switzerland_christ_dimen_2"
            android:layout_height="@dimen/switzerland_christ_dimen_1"
            android:layout_gravity="center"
            android:background="@color/switzerland_white" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>